# PixView

./: .gitignore  CMakeLists.txt  README.md  index.html
Common/: CMakeLists.txt  Fixture.cpp  Fixture.hpp  Logger.cpp  Logger.hpp  Output.hpp  PainterOutput.cpp  PainterOutput.hpp  Parser.cpp  Parser.hpp  PixelMapper.cpp  PixelMapper.hpp  Util.cpp  Util.hpp
deploy/: deploy.cmd  installer.nsi
pxm/: RGB_light  demo.pxm
qml/: About.qml  BoxSettings.qml  BrowseDialog.qml  main.qml
resources/: app.qrc
src/: AppSettings.cpp  AppSettings.hpp  CMakeLists.txt  Painter.cpp  Painter.hpp  PixelMapperWithError.cpp  PixelMapperWithError.hpp  Receiver.cpp  Receiver.hpp  main.cpp
tools/mpx2pxm/: CMakeLists.txt  Parser.hpp  main.cpp
